# Diffusion-Models-ENSO

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pixi.toml  pyproject.toml  setup.sh
.github/workflows/: ci.yml
notebooks/: Data_processing.ipynb
src/diffusion_models_enso/: config.py  data_handling.py  data_processing.py  new_code.py
src/diffusion_models_enso/utils/: load_config.py  utils.py
