[tool.poetry]
name = "Diffusion-Models-ENSO"
version = "0.1.0"
description = "Geospatial data science project to analyze ENSO-related diffusion patterns"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "diffusion_models_enso", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
xarray = "*"
scikit-learn = "*"
numpy = "*"
pandas = "*"
matplotlib = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
isort = "*"
mypy = "*"
pre-commit = "*"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
