[tool.poetry]
name = "Diffusion-Models-ENSO"
version = "0.1.0"
description = "Project to assess the ENSO variability using generative diffusion models"
authors = ["Niccolò Zagli"]
readme = "README.md"
packages = [{ include = "diffusion_models_enso", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
xarray = "*"
scikit-learn = "*"
numpy = "*"
pandas = "*"
matplotlib = "*"
pydantic-settings = "^2.9.1"
xskillscore = "^0.0.26"
ipykernel = "^6.29.5"
notebook = "^7.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
isort = "*"
mypy = "*"
pre-commit = "*"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
strict_optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
