[project]
name = "diffusion-models-enso"
version = "0.1.0"
description = "Project to assess the ENSO variability using generative diffusion models"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Niccolo Zagli" }]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
strict_optional = true

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
